# Generated using cxx from https://github.com/xyproto/cxx, 2023-02-06
cmake_minimum_required(VERSION 3.12)
project(spheremover)
set(TARGET spheremover PROPERTY CXX_STANDARD 23)
set(TARGET spheremover PROPERTY C_STANDARD 18)
set(SOURCES main.cpp common/script.cpp)
add_executable(spheremover ${SOURCES})
target_link_libraries(spheremover -ldl -lpthread -lSDL2 -lomp)
target_include_directories(spheremover PRIVATE . .. /usr/include/SDL2 common include)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_FLAGS "-std=c++2b -O3 -pipe -fPIC -fno-plt -fstack-protector-strong -fopenmp -Wall -Wshadow -Wpedantic -Wno-parentheses -Wvla -Wignored-qualifiers -pthread")
set(TARGET spheremover PROPERTY LINK_FLAGS -fopenmp -pthread -lpthread -Wl,--as-needed)
target_link_libraries(spheremover -fopenmp -pthread -lpthread -Wl,--as-needed)
add_definitions(-DIMGDIR="${CMAKE_CURRENT_SOURCE_DIR}/img/" -DSCRIPTDIR="${CMAKE_CURRENT_SOURCE_DIR}/scripts/" -D_REENTRANT)
